pages/docs/1.8/usage/cli/index.md
---
layout: layout.pug
title: CLI
menuWeight: 10
excerpt: ""
featureMaturity: ""
enterprise: 'no'
navigationTitle:  CLI
---

<!-- This source repo for this topic is https://github.com/dcos/dcos-docs -->


You can use the DC/OS command-line interface (CLI) to manage your cluster nodes, install DC/OS packages, inspect the cluster state, and administer the DC/OS service subcommands. 

You can quickly [install](/docs/1.8/usage/cli/install) the CLI from the DC/OS web interface.

To list available commands, either run `dcos` with no parameters or run `dcos help`:

```bash
Command line utility for the Mesosphere Datacenter Operating
System (DC/OS). The Mesosphere DC/OS is a distributed operating
system built around Apache Mesos. This utility provides tools
for easy management of a DC/OS installation.

Available DC/OS commands:

	auth           	Authenticate to DC/OS cluster
	config         	Manage the DC/OS configuration file
	experimental   	Experimental commands. These commands are under development and are subject to change
	help           	Display help information about DC/OS
	job            	Deploy and manage jobs in DC/OS
	marathon       	Deploy and manage applications to DC/OS
	node           	Administer and manage DC/OS cluster nodes
	package        	Install and manage DC/OS software packages
	service        	Manage DC/OS services
	task           	Manage DC/OS tasks

Get detailed command description with 'dcos <command> --help'.
```
    

# Environment Variables

These environment variables are supported by the DC/OS CLI and can be set dynamically.

#### DCOS_CONFIG
Specifies the path to the DC/OS configuration file. By default, this variable is set to `DCOS_CONFIG=/<home-directory>/.dcos/dcos.toml`. For example, if you moved your DC/OS configuration file to `/home/jdoe/config/` you can specify this command:

```bash
export DCOS_CONFIG=/home/jdoe/config/dcos.toml
```
    
#### DCOS_SSL_VERIFY
Indicates whether to verify SSL certificates or set the path to the SSL certificates. You must set this variable manually. Setting this environment variable is equivalent to setting the `dcos config set core.ssl_verify` option in the DC/OS configuration [file](#configuration-files). For example, to indicate that you want to set the path to SSL certificates:

```bash
export DCOS_SSL_VERIFY=false
```

#### DCOS_LOG_LEVEL 
Prints log messages to stderr at or above the level indicated. This is equivalent to the `--log-level` command-line option. The severity levels are:

*   **debug** Prints all messages to stderr, including informational, warning, error, and critical.
*   **info** Prints informational, warning, error, and critical messages to stderr.
*   **warning** Prints warning, error, and critical messages to stderr.
*   **error** Prints error and critical messages to stderr.
*   **critical** Prints only critical messages to stderr.

For example, to set the log level to warning:

```bash
export DCOS_LOG_LEVEL=warning
```

#### DCOS_DEBUG 
Indicates whether to print additional debug messages to `stdout`. By default this is set to `false`. For example:

```bash
export DCOS_DEBUG=true
``` 

# <a name="configuration-files"></a>Configuration Files

By default, the DC/OS CLI stores its configuration files in a directory called `~/.dcos` within your HOME directory. However, you can specify a different location by using the `DCOS_CONFIG` environment variable.

The configuration settings are stored in the `dcos.toml` file. You can modify these settings with the `dcos config` command.

#### dcos_url
The public master IP of your DC/OS installation. This is set by default during installation. For example:

```bash
dcos config set core.dcos_url 52.36.102.191
```

#### dcos_acs_token
The token generated by authenticating to DC/OS with the Access Control Service (ACS). To set the ACS token, run:

```bash
dcos config set core.dcos_acs_token <token>
```    

#### mesos_master_url
The Mesos master URL. This must be of the format: `http://<host>:<port>`. For example, to set your Mesos master URL:

```bash
dcos config set core.mesos_master_url 52.34.160.132:5050
```

#### pagination
Indicates whether to paginate output. By default this is set to `True`. For example, to set to false:

```bash
dcos config set core.pagination False
``` 
    
#### ssl_verify
Indicates whether to verify SSL certs for HTTPS or path to certs. By default this is set to `True`. For example, to set to false:

```bash
dcos config set core.ssl_verify False
```

#### timeout
Request timeout in seconds, with a minimum value of 1 second. By default this is set to 5 seconds. For example, to set to 3 seconds:

```bash
dcos config set core.timeout 3
```
 
